# rioutil

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac  configure.in  ltcf-c.sh  ltcf-cxx.sh  prepare-to-build
bsd_driver/: Makefile.am  Makefile.in
debian/: .gitignore  Makefile.am  Makefile.in  build_dpkg.sh.in  changelog  control  control.in  rio.rules  rules
include/: .gitignore  Makefile.am  Makefile.in  config.h.in  driver.h  rio.h  rio_internal.h  rio_usb.h  rioi.h  usbdevfs.h  usbdrv.h
librioutil/: Makefile.am  Makefile.in  bsd.c  byteorder.c  cksum.c  downloadable.c  driver_libusb.c  driver_macosx.c  driver_standard.c  driver_usbdevfs.c  file_list.c  hexdump.c  id3.c  mp3.c  mp3tech.c  mp3tech.h  playlist.c  rio.c  rioio.c  song_management.c  song_managment.c  usbdrvlinux.c  wma.c
linux_driver/: Makefile.in  rio_usb.h  rios.c
man/: .gitignore  Makefile.in  rioutil.1.in
spec/: .gitignore  Makefile.in  rioutil-libusb.spec  rioutil-libusb.spec.in  rioutil-usbdevfs.spec  rioutil-usbdevfs.spec.in  rioutil.spec  rioutil.spec.in
src/: .gitignore  Makefile.am  Makefile.in  main.c  main.h
tests/: .gitignore  Makefile.am  test_id3.c  test_mp3.c
